Wired in the talk animation for diorre into his actual dialogues.

--- a/data/level/Seaside/crevice-village-house-1.cfg
+++ b/data/level/Seaside/crevice-village-house-1.cfg
@@ -703,28 +703,40 @@
 			"custom": true,
 			"face_right": false,
 			"label": "diorre_trapped",
-			"on_talk": "speech_dialog(self,			[~Who are you?~],
-	              							set(level.player.animation, 'emote_raisedfinger'),
+			"on_talk": "speech_dialog(
+											set(self.animation, 'emote_talk'),
+							self,			[~Who are you?~],
+				  							set(level.player.animation, 'emote_raisedfinger'),
 							level.player,	[~I'm whatever the occasion calls for.~],
+											set(self.animation, 'emote_talk'),
 							self,			[~...~],
+											set(self.animation, 'emote_talk'),
 											[~That's nutty.~],
-	              							set(level.player.animation, 'emote_geez'),
+				  							set(level.player.animation, 'emote_geez'),
 							level.player,	[~Yes, well, at this particular juncture,\\nwho I am isn't very important.~],
-	              							set(level.player.animation, 'emote_raisedfinger'),
+				  							set(level.player.animation, 'emote_raisedfinger'),
 							level.player,	[~What's important is that I'm not in a cage,\\nso I might be able to do something to help.~],
-	              							set(level.player.animation, 'emote_talk'),
+				  							set(level.player.animation, 'emote_talk'),
 											[~Got any advice?~],
+											set(self.animation, 'emote_talk'),
 							self,			[~Yeah, that key right next to you -\\nI think that unlocks a house that\\nhas the controls to the town gate.~],
+											set(self.animation, 'emote_talk'),
 											[~Maybe.~],
+											set(self.animation, 'emote_talk'),
 											[~I've seen it one time, it's in the\\nhouse up and to your left from here;\\nup in the cliffside.~],
+											set(self.animation, 'emote_talk'),
 											[~Way upstairs there's a control room\\nwith a big button to open it.~],
+											set(self.animation, 'emote_talk'),
 											[~Keep an eye out for it!~],
-	              							set(level.player.animation, 'emote_nod'),
+				  							set(level.player.animation, 'emote_nod'),
 							level.player, 	[~Will do.  Catch ya around.~],
+											set(self.animation, 'emote_talk'),
 							self, 			[~HEY, WAIT!\\nWhat about me?!~],
-	              							set(level.player.animation, 'emote_geez'),
+				  							set(level.player.animation, 'emote_geez'),
 							level.player, 	[~Does it look like I have a key for your cage?~],
+											set(self.animation, 'emote_talk'),
 							self, 			[~...~],
+											set(self.animation, 'emote_talk'),
 											[~Ah, I see..\\ncarry on then.~])",
 			"type": "diorre_npc",
 			"x": 1487,
@@ -737,20 +749,20 @@
 			"face_right": false,
 			"label": "hedge_trapped",
 			"on_talk": "speech_dialog(self, [~Frogatto!  Is that you?~],
-	              							set(level.player.animation, 'emote_confused'),
+				  							set(level.player.animation, 'emote_confused'),
 							level.player, 	[~Yeah.\\nHey, Hedge, you alright?~],
 							self, 			[~Eh, I've been better, but yeah, I'm okay.~],
 											[~Besides the obvious cage situation.~],
-	              							set(level.player.animation, 'emote_confused'),
+				  							set(level.player.animation, 'emote_confused'),
 							level.player, 	[~Yeah.\\nSad to say, I can't pick locks.\\nI got nothing.~],
 							self, 			[~So I'm stuck here, huh?~],
-	              							set(level.player.animation, 'emote_nod'),
+				  							set(level.player.animation, 'emote_nod'),
 							level.player, 	[~Yep.~],
 							self, 			[~Phooey.~],
 											[~...~],
 											[~Hmm, you know, I know one thing\\nthat might help you..~],
 											[~There's supposedly\\na secret room in this house.~],
-	              							set(level.player.animation, 'emote_raisedfinger'),
+				  							set(level.player.animation, 'emote_raisedfinger'),
 							level.player, 	[~Oh really?  Where at?~],
 							self, 			[~If I knew that, it wouldn't\\nbe much of a secret, would it?~],
 											set(level.player.animation, 'emote_impatient'),
