--- a/data/level/Seaside/liberated-crevice-village-house-1.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-1.cfg
@@ -162,20 +162,20 @@
 			"label": "hedge",
 			"on_talk": "speech_dialog(self,	[~Hey, man, look at you!~],
 										[~I hear you had a big hand in scaring\\nthose guys off.  Way to go!~],
-	              				set(level.player.animation, 'emote_confused'),
-	                       level.player,[~Eh, I'd hardly say they were 'scared' away,\\nbut I might have tipped the scales.~],
+				  				set(level.player.animation, 'emote_confused'),
+						   level.player,[~Eh, I'd hardly say they were 'scared' away,\\nbut I might have tipped the scales.~],
 						   self,		[~Well, whatever you did,\\nI'm glad they're gone!~],
-	              				set(level.player.animation, 'emote_geez'),
-	                       level.player,[~Yeah, I just hope we don't\\nhave a repeat incident...~],
+				  				set(level.player.animation, 'emote_geez'),
+						   level.player,[~Yeah, I just hope we don't\\nhave a repeat incident...~],
 						   self,		[~Uh ... why would that happen?~],
-	              				set(level.player.animation, 'emote_confused'),
-	                       level.player,[~I don't know, but...\\nWhy did this happen in the first place?~],
-	              				set(level.player.animation, 'emote_raisedfinger'),
-	                       				[~It's an important question,\\nand someone needs to look into it.~],
+				  				set(level.player.animation, 'emote_confused'),
+						   level.player,[~I don't know, but...\\nWhy did this happen in the first place?~],
+				  				set(level.player.animation, 'emote_raisedfinger'),
+						   				[~It's an important question,\\nand someone needs to look into it.~],
 						   self,		[~Would that someone possibly be you?~],
-	              				set(level.player.animation, 'emote_nod'),
-	                       level.player,[~That is a distinct possibility.~],
-	                       self,		[~Well, hey - you be careful, alright?\\nStay cool.~])",
+				  				set(level.player.animation, 'emote_nod'),
+						   level.player,[~That is a distinct possibility.~],
+						   self,		[~Well, hey - you be careful, alright?\\nStay cool.~])",
 			"type": "hedge_npc",
 			"x": 1504,
 			"y": 1091
@@ -203,8 +203,8 @@
 			"face_right": false,
 			"label": "_40862e75",
 			"on_talk": "speech_dialog(
-                        set(level.player.animation, 'emote_talk'),
-                        level.player, [~It says,\\n\"Mastering Your Surroundings.\"~])",
+						set(level.player.animation, 'emote_talk'),
+						level.player, [~It says,\\n\"Mastering Your Surroundings.\"~])",
 			"type": "wooden_shelves_big_books",
 			"x": 704,
 			"y": 1024
@@ -248,8 +248,8 @@
 			"face_right": false,
 			"label": "_3ee45488",
 			"on_talk": "speech_dialog(
-                        set(level.player.animation, 'emote_talk'),
-                        level.player, [~It says,\\n\"Maintaining a Completely Impractical Hairstyle.\"~])",
+						set(level.player.animation, 'emote_talk'),
+						level.player, [~It says,\\n\"Maintaining a Completely Impractical Hairstyle.\"~])",
 			"type": "wooden_shelves_big_books3",
 			"x": 1184,
 			"y": -448
@@ -337,14 +337,14 @@
 			"face_right": false,
 			"label": "_b641c91",
 			"on_talk": "speech_dialog(
-                        set(level.player.animation, 'emote_talk'),
-                        level.player, [~There are a lot of children's books here.~],
-                        set(level.player.animation, 'emote_talk'),
-                        level.player, [~\"Timmy the Turtle Tries to Talk.\"~],
-                        set(level.player.animation, 'emote_talk'),
-                        level.player, [~\"Captain Cucaracha Learns the Meaning of Friendship.\"~],
-                        set(level.player.animation, 'emote_confused'),
-                        level.player, [~\"Princess Wildebeest Meets the Bad Manners Buffalo.\"~])",
+						set(level.player.animation, 'emote_talk'),
+						level.player, [~There are a lot of children's books here.~],
+						set(level.player.animation, 'emote_talk'),
+						level.player, [~\"Timmy the Turtle Tries to Talk.\"~],
+						set(level.player.animation, 'emote_talk'),
+						level.player, [~\"Captain Cucaracha Learns the Meaning of Friendship.\"~],
+						set(level.player.animation, 'emote_confused'),
+						level.player, [~\"Princess Wildebeest Meets the Bad Manners Buffalo.\"~])",
 			"type": "wooden_shelves_big_books2",
 			"x": 1568,
 			"y": -96
@@ -469,15 +469,20 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_2f06cb36",
-			"on_talk": "speech_dialog(	 set(level.player.animation, 'emote_raisedfinger'),
-								level.player, [~Hey, what's new?~],
-							self, [~Oh, just cleaning up after that ruckus.~],	
-								  [~So nice to have things back to normal.~],
-	              				set(level.player.animation, 'emote_nod'),
-	                       level.player, [~You bet.~],
-	              				set(level.player.animation, 'emote_geez'),
-								  [~Speaking of which, am I imagining it\\nor is this house actually smaller now?~],
-						   self, [~Of course not.\\nThat's just nutty.~])",
+			"on_talk": "speech_dialog(
+									set(level.player.animation, 'emote_raisedfinger'),
+					level.player,	[~Hey, what's new?~],
+									set(self.animation, 'emote_talk'),
+							self,	[~Oh, just cleaning up after that ruckus.~],	
+									set(self.animation, 'emote_talk'),
+									[~So nice to have things back to normal.~],
+									set(level.player.animation, 'emote_nod'),
+					level.player,	[~You bet.~],
+									set(level.player.animation, 'emote_geez'),
+									[~Speaking of which, am I imagining it\\nor is this house actually smaller now?~],
+									set(self.animation, 'emote_talk'),
+							self,	[~Of course not.\\nThat's just nutty.~]
+			)",
 			"type": "diorre_npc",
 			"x": 480,
 			"y": -23
