--- a/data/objects/props-interactive/npcs/diorre_npc.cfg
+++ b/data/objects/props-interactive/npcs/diorre_npc.cfg
@@ -3,6 +3,11 @@ id: "diorre_npc",
 prototype: ["standing_npc"],
 solid_dimensions: ["npc"],
 solid_area: [17,18,30,42],
+
+
+on_end_emote_talk_anim: "animation('stand')",
+
+
 animation: [{
 	"@base": true,
 	image: "npc/diorre.png",
@@ -16,7 +21,7 @@ animation: [{
 	frames: 5,
 	reverse: true,
 },{
-	id: "talk",
+	id: "emote_talk",
 	rect: [11,57,53,102],
 	frames: 8,
 }]
