Wired in the talk animation for cubeaver into his actual dialogues.

--- a/data/objects/props-interactive/npcs/cubeaver_npc.cfg
+++ b/data/objects/props-interactive/npcs/cubeaver_npc.cfg
@@ -3,6 +3,11 @@ id: "cubeaver_npc",
 prototype: ["standing_npc"],
 solid_dimensions: ["npc"],
 solid_area: [6,6,29,29],
+
+
+on_end_emote_talk_anim: "animation('stand')",
+
+
 animation: [{
 	"@base": true,
 	image: "npc/cubeaver.png",
@@ -24,7 +29,7 @@ animation: [{
 	frames: 3,
 	reverse: true,
 },{
-	id: "talk",
+	id: "emote_talk",
 	rect: [1,45,36,77],
 	duration: 7,
 	frames: 3,
