--- a/data/level/Forest/tempo-outskirts-inside.cfg
+++ b/data/level/Forest/tempo-outskirts-inside.cfg
@@ -8,35 +8,53 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_e0bb885",
-			"on_talk": "speech_dialog(self, [~Oh my, a visitor!~],
-	           		   						set(level.player.animation, 'emote_raisedfinger'),
-						   level.player,	[~Hey, I'm sorry to barge in and all,\\nbut what happened to that bridge?~],
-						   self,        	[~Yes, I've had a few people come in\\nto ask about that.~],
-						                	[~There was a storm a few weeks ago,\\nand a big swell of water washed it out.~],
-						                	[~You've probably seen this yourself, but\\njust to be sure... don't go into the water.~],
-						                	[~Current that hard will just smash you\\nagainst the rocks.~],
-						                	set(level.player.animation, 'emote_confused'),
-						   level.player,	[~No surprise...  I'm actually a bit confused\\nabout how to get where I'm going.~],
-	           		   						set(level.player.animation, 'emote_raisedfinger'),
-						                	[~See, I'm trying to make it to\\nMilgram's castle.~],
-						   self,        	[~Yes, he's quite the businessman.\\nIt'd be nice if he could help us, here.~],
-						   					set(level.player.animation, 'emote_confused'),
-						   level.player,	[~Hmm?~],
-						   self,        	[~Well, for one thing, it'd be nice if\\nanyone could help get this bridge fixed.~],
-						                	[~I sent in a request shortly after it fell,\\nand they've been too busy to do anything.~],
-						                	[~Anyways, the best way for you to go\\nwould be to head to Tempo Village.~],
-						                	[~There's a way from there to get to\\nMilgram's Castle.~],
-						                	[~Now, unfortunately, the easiest way...~],
-						                	[~...would have been to cross the\\nbridge next to this house.~],
-						                	set(level.player.animation, 'emote_impatient'),
-						   level.player,	[~Figures.~],
-						   self,        	[~Fortunately, you're not completely\\nout of luck.~],
-						                	[~If you hike back a ways, you should\\nsee a shortcut through the trees.~],
-						                	[~Taking that will get you to an\\nodd contraption called \"the conveyance\".~],
-						                	[~It's a ... little odd, but it is\\na way across the river.~],
-						                	set(level.player.animation, 'emote_nod'),
-						   level.player,	[~Yeah - sure beats \"nothing\", though.\\nThanks a lot!~],
-						   self,        	[~No problem.  Best of luck.~])",
+			"on_talk": "speech_dialog(
+											set(self.animation, 'emote_talk'),
+							self,			[~Oh my, a visitor!~],
+			   		   						set(level.player.animation, 'emote_raisedfinger'),
+							level.player,	[~Hey, I'm sorry to barge in and all,\\nbut what happened to that bridge?~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Yes, I've had a few people come in\\nto ask about that.~],
+											set(self.animation, 'emote_talk'),
+											[~There was a storm a few weeks ago,\\nand a big swell of water washed it out.~],
+											set(self.animation, 'emote_talk'),
+											[~You've probably seen this yourself, but\\njust to be sure... don't go into the water.~],
+											set(self.animation, 'emote_talk'),
+											[~Current that hard will just smash you\\nagainst the rocks.~],
+											set(level.player.animation, 'emote_confused'),
+							level.player,	[~No surprise...  I'm actually a bit confused\\nabout how to get where I'm going.~],
+											set(level.player.animation, 'emote_raisedfinger'),
+											[~See, I'm trying to make it to\\nMilgram's castle.~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Yes, he's quite the businessman.\\nIt'd be nice if he could help us, here.~],
+											set(level.player.animation, 'emote_confused'),
+							level.player,	[~Hmm?~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Well, for one thing, it'd be nice if\\nanyone could help get this bridge fixed.~],
+											set(self.animation, 'emote_talk'),
+											[~I sent in a request shortly after it fell,\\nand they've been too busy to do anything.~],
+											set(self.animation, 'emote_talk'),
+											[~Anyways, the best way for you to go\\nwould be to head to Tempo Village.~],
+											set(self.animation, 'emote_talk'),
+											[~There's a way from there to get to\\nMilgram's Castle.~],
+											set(self.animation, 'emote_talk'),
+											[~Now, unfortunately, the easiest way...~],
+											set(self.animation, 'emote_talk'),
+											[~...would have been to cross the\\nbridge next to this house.~],
+											set(level.player.animation, 'emote_impatient'),
+							level.player,	[~Figures.~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Fortunately, you're not completely\\nout of luck.~],
+											set(self.animation, 'emote_talk'),
+											[~If you hike back a ways, you should\\nsee a shortcut through the trees.~],
+											set(self.animation, 'emote_talk'),
+											[~Taking that will get you to an\\nodd contraption called \"the conveyance\".~],
+											set(self.animation, 'emote_talk'),
+											[~It's a ... little odd, but it is\\na way across the river.~],
+											set(level.player.animation, 'emote_nod'),
+							level.player,	[~Yeah - sure beats \"nothing\", though.\\nThanks a lot!~],
+											set(self.animation, 'emote_talk'),
+							self,			[~No problem.  Best of luck.~])",
 			"type": "cubeaver_npc",
 			"x": 812,
 			"y": 322
