Wired in the talk animations for Pato.

--- a/data/level/Seaside/frogatto-grotto-inside.cfg
+++ b/data/level/Seaside/frogatto-grotto-inside.cfg
@@ -166,45 +166,57 @@
 					set(level.focus, [self]),
 					set(level.zoom, 2),
 					speech_dialog(
-		             				self,    		[~Hey, Frogatto.~],
+													set(self.animation, 'emote_talk'),
+					 				self,			[~Hey, Frogatto.~],
 													set(level.player.facing, sign(self.mid_x - level.player.mid_x)),
-	              									set(level.player.animation, 'emote_oh'),
-	              									set(level.focus, [level.player]),
+				  									set(level.player.animation, 'emote_oh'),
+				  									set(level.focus, [level.player]),
 									level.player,	[~Uhm... yes?~],
 													set(level.focus, [self]),
+													set(self.animation, 'emote_talk'),
 									self,			[~At least <em>try</em> to get a job today,\\nalright?~],
+													set(self.animation, 'emote_confused'),
 													[~We need some help around here.~],
-	              									set(level.player.animation, 'emote_geez'),
-	              									set(level.focus, [level.player]),
+				  									set(level.player.animation, 'emote_geez'),
+				  									set(level.focus, [level.player]),
 									level.player,	[~Yeah, I know.  I'll try.~],
 													set(level.focus, [self]),
+													set(self.animation, 'emote_talk'),
 									self,			[~See to it.~], set(level.zoom, 1), set(level.focus, [])
 					)]",
 			"on_see_juggling": "if(level.player is obj frogatto_playable, if(not level.player.get_stored_event('pato_see_juggling') = 1,
-										[schedule(10, transient_speech_dialog(self, 300,
-										[~That's a cool trick,\\nbut shouldn't you be trying to get a <em>real</em> job?~])),
-										level.player.store_event('pato_see_juggling',1)]))",
+										[
+											set(self.animation, 'emote_confused'),
+											schedule(10, transient_speech_dialog(self, 300,
+												[~That's a cool trick,\\nbut shouldn't you be trying to get a <em>real</em> job?~])),
+											level.player.store_event('pato_see_juggling',1)
+										]
+								))",
 			"on_start_level": "[if(size(level.player.levels_visited) < 10,null, [set(x,767),set(y,142)])]",
 			"on_talk": "[swallow_event(),		if( size(level.player.levels_visited) < 10,
-										speech_dialog(level.player,
-											set(level.player.animation, 'emote_raisedfinger'),
-											[~Hey, how's breakfast coming?~],
-											self, [~Breakfast? ..bud, we're on lunch.~],
-											[~You need to get up earlier.~],
+										speech_dialog(
 											level.player,
-											set(level.player.animation, 'emote_geez'),
-											[~Okay, then how's lunch coming?~],
-											self, [~Getting there.\\nIt's gonna be a while, though.~],
-											set(level.player.animation, 'emote_raisedfinger'),
-											level.player, [~I'll check back later, then.~]),
-										speech_dialog(level.player,
-											set(level.player.animation, 'emote_raisedfinger'),
-											[~So, what happened to lunch?~],
-											self, [~I got tired of waiting,\\nand ate by myself.~],
-											[~Leftovers are in the fridge.~],
-											level.player,
-											set(level.player.animation, 'emote_oh'),
-											[~Okay, uhm, thanks.~]))
+															set(level.player.animation, 'emote_raisedfinger'),
+															[~Hey, how's breakfast coming?~],
+															set(self.animation, 'emote_confused'),
+											self,			[~Breakfast? ..bud, we're on lunch.~],
+															set(self.animation, 'emote_talk'),
+															[~You need to get up earlier.~],
+															set(level.player.animation, 'emote_geez'),
+											level.player,	[~Okay, then how's lunch coming?~],
+															set(self.animation, 'emote_talk'),
+											self,			[~Getting there.\\nIt's gonna be a while, though.~],
+															set(level.player.animation, 'emote_raisedfinger'),
+											level.player,	[~I'll check back later, then.~]),
+										speech_dialog(
+															set(level.player.animation, 'emote_raisedfinger'),
+											level.player,	[~So, what happened to lunch?~],
+															set(self.animation, 'emote_talk'),
+											self,			[~I got tired of waiting,\\nand ate by myself.~],
+															set(self.animation, 'emote_confused'),
+															[~Leftovers are in the fridge.~],
+															set(level.player.animation, 'emote_oh'),
+											level.player,	[~Okay, uhm, thanks.~]))
 
 											]",
 			"property_data": {
@@ -244,8 +256,8 @@
 			"custom": true,
 			"label": "_26d3fdd2",
 			"on_triggered": "[transient_speech_dialog(level.player,
-		                  [~Not like I need to be up,~],
-		                  [~but it's the principle of the thing.~]) ,die()]",
+						  [~Not like I need to be up,~],
+						  [~but it's the principle of the thing.~]) ,die()]",
 			"property_data": {
 				"_x2_bound": 1094,
 				"_x_bound": 956,
