--- a/data/objects/props-interactive/npcs/pato_npc.cfg
+++ b/data/objects/props-interactive/npcs/pato_npc.cfg
@@ -3,6 +3,12 @@ id: "pato_npc",
 prototype: ["walking_npc"],
 solid_area: [10,11,32,36],
 solid_dimensions: ["npc"],
+
+
+on_end_emote_talk_anim: "animation('stand')",
+on_end_emote_confused_anim: "animation('emote_talk')",
+
+
 animation: [
 	{
 		"@base": true,
@@ -38,5 +44,23 @@ animation: [
 		frames: 8,
 		duration: 5,
 	},
+
+#-------------------------- emote animations --------------------------#
+	{
+		id: "emote_talk",
+		rect: [1,352,41,392],
+		frames: 5,
+		duration: 6,
+		reverse: true,
+	},
+
+	{
+		id: "emote_confused",
+		rect: [1,401,41,441],
+		frames: 5,
+		duration: 6,
+		reverse: true,
+	},
+
 ],
 }
