Wired in chopple's talk animation.

--- a/data/level/Seaside/chopple-shop-interior.cfg
+++ b/data/level/Seaside/chopple-shop-interior.cfg
@@ -75,57 +75,71 @@
 			"on_talk": "fire_event(if(level.player.get_stored_event('town_elder_fight_won'), 'talk_town_safe', 'talk_town_unsafe'))",
 			"on_talk_no_money_check": "if(level.player.coins_total_obtained = 0, 
 											[speech_dialog(
-											set(level.player.animation, 'emote_confused'),
-											level.player, [~Wares?\\nSo you mean these things are for sale?~],
-											Chopple, [~Uhh, yes.\\nThis is a store, after all.~],
-											set(level.player.animation, 'emote_raisedfinger'),
-											level.player, [~Well, that's not important!\\nWhat matters is discussing this <em>'money'</em> business.~],
-											set(level.player.animation, 'emote_talk'),
-											level.player, [~It only gets in the way of true happiness.~],
-											set(level.player.animation, 'emote_oh'),
-											level.player, [~I know you're a generous person,\\nand you know I'm... uh... flat broke.~],
-											set(level.player.animation, 'emote_talk'),
-											level.player, [~I hear that a certain amount of charity\\nis very fulfilling.~],
-											set(level.player.animation, 'emote_nod'),
-											level.player, [~And certainly, I would be more than happy\\nto put one of these fine items to good use.~],
-											set(level.player.animation, 'emote_raisedfinger'),
-											level.player, [~See?  We both win, we're both happier.\\nThere's no need for middlemen.~],
-											Chopple, [~Well, maybe I could part with something...\\nYou're a nice guy.~],
+															set(level.player.animation, 'emote_confused'),
+											level.player,	[~Wares?\\nSo you mean these things are for sale?~],
+															set(self.animation, 'emote_talk'),
+											Chopple,		[~Uhh, yes.\\nThis is a store, after all.~],
+															set(level.player.animation, 'emote_raisedfinger'),
+											level.player,	[~Well, that's not important!\\nWhat matters is discussing this <em>'money'</em> business.~],
+															set(level.player.animation, 'emote_talk'),
+											level.player,	[~It only gets in the way of true happiness.~],
+															set(level.player.animation, 'emote_oh'),
+											level.player,	[~I know you're a generous person,\\nand you know I'm... uh... flat broke.~],
+															set(level.player.animation, 'emote_talk'),
+											level.player,	[~I hear that a certain amount of charity\\nis very fulfilling.~],
+															set(level.player.animation, 'emote_nod'),
+											level.player,	[~And certainly, I would be more than happy\\nto put one of these fine items to good use.~],
+															set(level.player.animation, 'emote_raisedfinger'),
+											level.player,	[~See?  We both win, we're both happier.\\nThere's no need for middlemen.~],
+															set(self.animation, 'emote_talk'),
+											Chopple,		[~Well, maybe I could part with something...\\nYou're a nice guy.~],
 											/*todo: pan camera towards the health powerup*/
-											Chopple, [~That thing over there - it's on the house.\\nA free sample, if you will.~],
-											Chopple, [~But still, would you come back some other time\\nto do actual business?~],
-											Chopple, [~I still need to pay the bills,\\nwhether I'm happy or not.~],
+															set(self.animation, 'emote_talk'),
+											Chopple,		[~That thing over there - it's on the house.\\nA free sample, if you will.~],
+															set(self.animation, 'emote_talk'),
+											Chopple,		[~But still, would you come back some other time\\nto do actual business?~],
+															set(self.animation, 'emote_talk'),
+											Chopple,		[~I still need to pay the bills,\\nwhether I'm happy or not.~],
 											)
 											where Chopple = me,
 											achievement('bartering_batrachian')])",
 			"on_talk_town_safe": "speech_dialog(
-									set(level.player.animation, 'emote_talk'), 
-									level.player, [~Hi, Chopple.~],
-									Chopple, [~Hi!  That was quite the ruckus at the village, hmm?\\nSo I've heard.~],
-									set(level.player.animation, 'emote_talk'), 
-									level.player, [~It was!\\nBut the kitties have gone home already.~],
-									set(level.player.animation, 'emote_nod'), 
-									level.player, [~I imagine that'll be good for business.~],
-									Chopple, [~Well, it feels a bit selfish\\nto think of the situation that way,\\nsince I was here, safe and sound, the whole time.~],
-									Chopple, [~Still...\\nYes, when people can't get around,\\nI'm unable to sell anything.~],
-									Chopple, [~But since you've mentioned business,\\nfeel free to look around.~],
-									Chopple, [~Some of my wares here may be just what you need.~],
-									fire_event('talk_no_money_check')
+													set(level.player.animation, 'emote_talk'), 
+									level.player,	[~Hi, Chopple.~],
+													set(self.animation, 'emote_talk'),
+									Chopple,		[~Hi!  That was quite the ruckus at the village, hmm?\\nSo I've heard.~],
+													set(level.player.animation, 'emote_talk'), 
+									level.player,	[~It was!\\nBut the kitties have gone home already.~],
+													set(level.player.animation, 'emote_nod'), 
+									level.player,	[~I imagine that'll be good for business.~],
+													set(self.animation, 'emote_talk'),
+									Chopple,		[~Well, it feels a bit selfish\\nto think of the situation that way,\\nsince I was here, safe and sound, the whole time.~],
+													set(self.animation, 'emote_talk'),
+									Chopple,		[~Still...\\nYes, when people can't get around,\\nI'm unable to sell anything.~],
+													set(self.animation, 'emote_talk'),
+									Chopple,		[~But since you've mentioned business,\\nfeel free to look around.~],
+													set(self.animation, 'emote_talk'),
+									Chopple,		[~Some of my wares here may be just what you need.~],
+													fire_event('talk_no_money_check')
 									)
 									where Chopple = me",
 			"on_talk_town_unsafe": "speech_dialog(
-									set(level.player.animation, 'emote_talk'), 
-									level.player, [~Hi, Chopple.~],
-									Chopple, [~Hey.  By the way...\\nDid you just come from the village,\\nif you don't mind me asking?~],
-									set(level.player.animation, 'emote_confused'),
-									level.player, [~No, actually, I was just heading there now.\\nIs something wrong?~],
-									Chopple, [~Well, it's just that there seems to be something\\ngoing on in the village,\\nso my assistant went in there to check.~],
-									Chopple, [~I'm starting to worry,\\nit's been some hours now.~, ~I'm sure he's alright.~, [
+													set(level.player.animation, 'emote_talk'), 
+									level.player,	[~Hi, Chopple.~],
+													set(self.animation, 'emote_talk'),
+									Chopple,		[~Hey.  By the way...\\nDid you just come from the village,\\nif you don't mind me asking?~],
+													set(level.player.animation, 'emote_confused'),
+									level.player,	[~No, actually, I was just heading there now.\\nIs something wrong?~],
+													set(self.animation, 'emote_talk'),
+									Chopple,		[~Well, it's just that there seems to be something\\ngoing on in the village,\\nso my assistant went in there to check.~],
+													set(self.animation, 'emote_talk'),
+									Chopple,		[~I'm starting to worry,\\nit's been some hours now.~, ~I'm sure he's alright.~, [
 										speech_dialog(
-														set(level.player.animation, 'emote_nod'),
-														level.player, [~I'm sure he's alright.\\nProbably just lazing off somewhere.~],
-														Chopple, [~I hope so.\\nIn the meantime, did you mean to look at my wares?~],
-														fire_event('talk_no_money_check')
+																		set(level.player.animation, 'emote_nod'),
+														level.player,	[~I'm sure he's alright.\\nProbably just lazing off somewhere.~],
+																		set(self.animation, 'emote_talk'),
+														Chopple,		[~I hope so.\\nIn the meantime, did you mean to look at my wares?~],
+																		fire_event('talk_no_money_check')
 														)]]
 									)
 									where Chopple = me",
