--- a/data/objects/props-interactive/npcs/chopple_npc.cfg
+++ b/data/objects/props-interactive/npcs/chopple_npc.cfg
@@ -4,6 +4,11 @@ prototype: ["standing_npc"],
 solid_dimensions: ["npc"],
 solid_area: [9,20,28,45],
 
+
+on_end_emote_talk_anim: "animation('stand')",
+
+
+
 animation: [{
 	"@base": true,
 	image: "npc/chopple.png",
@@ -25,9 +30,10 @@ animation: [{
 	frames: 3,
 	reverse: true,
 },{
-	id: "talk",
+	id: "emote_talk",
 	rect: [2,53,39,100],
 	duration: 7,
 	frames: 8,
+	reverse: true,
 }],
 }
