Added chopple's talk animation, and converted his locked-in-a-cage conversation to use it.

--- a/data/objects/props-interactive/npcs/kinguin_npc.cfg
+++ b/data/objects/props-interactive/npcs/kinguin_npc.cfg
@@ -11,6 +11,9 @@ traction: 1000,
 solid_dimensions: [],
 solid_area: [8,10,23,30],
 
+on_end_emote_talk_anim: "animation('stand')",
+
+
 animation: [
 	{
 		image: "characters/kinguin-spritesheet1.png",
@@ -65,6 +68,22 @@ animation: [
 		frames: 1,
 		duration: 5,
 	},
+	{
+		image: "characters/kinguin-spritesheet1.png",
+		pad: 3,
+		accel_x: 0,
+		accel_y: 80,
+		interact_area: "all",
+		id: "emote_talk",
+		x: 2,
+		y: 233,
+		w: 32,
+		h: 33,
+		frames: 8,
+		duration: 7,
+		reverse: true,
+	},
+
 	{
 		image: "characters/kinguin-spritesheet1.png",
 		pad: 3,
