--- a/data/level/Seaside/crevice-village-house-4.cfg
+++ b/data/level/Seaside/crevice-village-house-4.cfg
@@ -828,22 +828,30 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_235ceb27",
-			"on_talk": "speech_dialog(self, [~This is decidedly unpleasant.~],
-	              				set(level.player.animation, 'emote_raisedfinger'),
-							level.player, [~You don't say.~],
-	              				set(level.player.animation, 'emote_geez'),
-							level.player, [~When I stepped in the door,\\nit locked behind me.~],
-							self, [~That's actually a rather clever\\nway to round everyone up.~],
-	              				set(level.player.animation, 'emote_confused'),
-							level.player, [~Know anything helpful\\nabout this house?~],
-							self, [~Unfortunately I don't.\\nI was just visiting.~],
-								 [~The floorplan is quite loony.~],
-	              				set(level.player.animation, 'emote_raisedfinger'),
-							level.player, [~Marvelous ventilation, though.~],
-							self, [~You don't say.~],
-	              				set(level.player.animation, 'emote_geez'),
-							level.player, [~Anyways, I'd better be off.\\nI'm trying to sort out this mess.~],
-							self, [~Good luck.~])",
+			"on_talk": "speech_dialog(
+											set(self.animation, 'emote_talk'),
+							self,			[~This is decidedly unpleasant.~],
+											set(level.player.animation, 'emote_raisedfinger'),
+							level.player,	[~You don't say.~],
+											set(level.player.animation, 'emote_geez'),
+							level.player,	[~When I stepped in the door,\\nit locked behind me.~],
+											set(self.animation, 'emote_talk'),
+							self,			[~That's actually a rather clever\\nway to round everyone up.~],
+											set(level.player.animation, 'emote_confused'),
+							level.player,	[~Know anything helpful\\nabout this house?~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Unfortunately I don't.\\nI was just visiting.~],
+											set(self.animation, 'emote_talk'),
+											[~The floorplan is quite loony.~],
+											set(level.player.animation, 'emote_raisedfinger'),
+							level.player,	[~Marvelous ventilation, though.~],
+											set(self.animation, 'emote_talk'),
+							self,			[~You don't say.~],
+											set(level.player.animation, 'emote_geez'),
+							level.player,	[~Anyways, I'd better be off.\\nI'm trying to sort out this mess.~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Good luck.~]
+					)",
 			"property_data": {
 				"max_x": 1700,
 				"min_x": 1500,
