Wired in the talk animation for kinguin outside the elder's house.

--- a/data/level/Seaside/crevice-village-heights.cfg
+++ b/data/level/Seaside/crevice-village-heights.cfg
@@ -212,6 +212,7 @@
 					speech_dialog(
 								set(level.player.animation, 'emote_raisedfinger'),
 				level.player,	[~Hello again.~],
+								set(self.animation, 'emote_talk'),
 				self,			[~Hey there.~],
 					),
 				
@@ -222,24 +223,30 @@
 					speech_dialog(
 							set(level.player.animation, 'emote_raisedfinger'),
 			level.player,	[~Wow, so they seriously just packed up and left?\\nThat's amazing!~],
+							set(self.animation, 'emote_talk'),
 			self,			[~Tell me about it.~],
 							set(level.player.animation, 'emote_confused'),
 			level.player,	[~So, how did you get out of your cage?~],
+							set(self.animation, 'emote_talk'),
 			self,			[~Well, they just let me out.~],
 							set(level.player.animation, 'emote_oh'),
 			level.player,	[~What?!\\nThey ... as in Milgram's kitties?~],
+							set(self.animation, 'emote_talk'),
 			self,			[~Yeah... it doesn't make any sense!\\nWhy would they just let me go?~, 
 								~Because I gave their leader THE BUSINESS!~, [speech_dialog(
 									set(level.player.animation, 'emote_raisedfinger'),
 					level.player,	[~Because I gave their leader THE BUSINESS!~],
+									set(self.animation, 'emote_talk'),
 					self,			[~Seriously?  Badass!~],
 									set(level.player.animation, 'emote_nod'),
 					level.player,	[~I try.~],
+									set(self.animation, 'emote_talk'),
 					self,			[~This was that kitty with the sword?\\nThe one who came walking out?~],
 									set(level.player.animation, 'emote_raisedfinger'),
 					level.player,	[~Yup.\\nI kicked his ass.~],
 									set(level.player.animation, 'emote_talk'),
 									[~Far as I can tell,\\nhe was holding up the elder.~],
+									set(self.animation, 'emote_talk'),
 					self,			[~Yeah, I heard a bunch of it.~],
 									set(level.player.animation, 'emote_raisedfinger'),
 					level.player,	[~Anyways, as you may have heard,\\nI'm going on a little trip, here.~],
@@ -247,10 +254,12 @@
 									[~Yeah, I'm a little worried about\\nwhat might happen if someone doesn't\\nget in touch with Milgram.~],
 									set(level.player.animation, 'emote_impatient'),
 									[~That old clown was just sabre-rattling\\nabout raising a militia.~],
+									set(self.animation, 'emote_talk'),
 					self,			[~You don't think he could actually\\npull that off, do you?~,
 										~Nah, we're a little too laid back.~, [speech_dialog(
 												set(level.player.animation, 'emote_confused'),
 								level.player,	[~Nah, we're a little too laid back.\\nWe're a bunch of pushovers, thank goodness.~], 
+												set(self.animation, 'emote_talk'),
 								self,			[~I can't imagine the alternative.\\nIt'd be a horrible way to live.~],
 												set(level.player.animation, 'emote_geez'),
 								level.player,	[~I guess I'm also worried about the other end;\\nwhat Milgram is doing, et cetera.~],
@@ -266,7 +275,9 @@
 												[~That's still a few untimely deaths.~], 
 												set(level.player.animation, 'emote_geez'),
 												[~I might wish that on <em>him</em>,\\nbut not on anyone else.~],
+												set(self.animation, 'emote_talk'),
 								self,			[~Yeah, I see what you mean.~],
+												set(self.animation, 'emote_talk'),
 												[~You think you'd be able to forestall this?~],
 												set(level.player.animation, 'emote_confused'),
 								level.player,	[~Maybe? If I got Milgram some\\nadvance warning, who knows?~], 
@@ -276,6 +287,7 @@
 					level.player,	[~I don't know; it's a little crazy to do this,\\nbut I've kinda been itching for something\\nworthwhile to do.~],
 									set(level.player.animation, 'emote_raisedfinger'),
 									[~Good excuse to get out and travel a bit.\\nSee the island.~],
+									set(self.animation, 'emote_talk'),
 					self,			[~Risky business, though, isn't it?~],
 									set(level.player.animation, 'emote_talk'),
 					level.player,	[~Oh, no question.~],
@@ -283,25 +295,36 @@
 									[~Though... it <em>cannot</em> be worse than what\\nI have to deal with just coming into town.~],
 									set(level.player.animation, 'emote_confused'),
 									[~Who knows?\\nMaybe something good will come of it?~],
+									set(self.animation, 'emote_talk'),
 					self,			[~Well, good luck!\\nI'll be around.~]
 					)],
 								~Because of your winning smile?~, [speech_dialog(
 									set(level.player.animation, 'emote_raisedfinger'),
 					level.player,	[~Because of your winning smile?~],
+									set(self.animation, 'emote_talk'),
 					self,			[~Haha, sure.~],
+									set(self.animation, 'emote_talk'),
 									[~Still, though, that just seems\\nlike an enormous waste of effort.~],
 									set(level.player.animation, 'emote_confused'),
 					level.player,	[~Yeah, this whole day has just been ... bizarre.~], 
+									set(self.animation, 'emote_talk'),
 					self,			[~I've been thinking about that part,\\nand I have a hunch.~],
+									set(self.animation, 'emote_talk'),
 									[~I think the rank-and-file weren't\\ngiven very specific orders.~],
+									set(self.animation, 'emote_talk'),
 									[~I think they were just told to secure\\nthe place, and the higher-ups would\\nthen find what they really were after.~],
+									set(self.animation, 'emote_talk'),
 									[~Just arresting everyone is a strange way\\nto do it, but I guess it's not so weird\\nif you've got lots of manpower to spare.~],
+									set(self.animation, 'emote_talk'),
 									[~If they were just looking for the elder\\nand didn't care about ticking people off,\\nit's one way to make sure he couldn't slip away.~],
+									set(self.animation, 'emote_talk'),
 									[~I mean, I don't know...\\nwhat do you think?~,
 											~Is that really who they were after?~, [speech_dialog(
 													set(level.player.animation, 'emote_confused'),
 									level.player,	[~Well, is that really who they were after?~],
+													set(self.animation, 'emote_talk'),
 									self,			[~Yeah, one of their head guys showed me\\na drawing of him.~],
+													set(self.animation, 'emote_talk'),
 													[~He asked me if I knew who it was.~],
 													set(level.player.animation, 'emote_confused'),
 									level.player,	[~That's very interesting...~],
@@ -313,18 +336,23 @@
 											~Nah, that still seems crazy.~,	 [speech_dialog(
 													set(level.player.animation, 'emote_geez'),
 									level.player,	[~Nah, that still seems crazy.\\nSorry.~],
+													set(self.animation, 'emote_talk'),
 									self,			[~Yeah, fair enough - it's just a theory.~],
+													set(self.animation, 'emote_talk'),
 													[~It's pretty weird even if there <em>is</em>\\nsome rational explanation.~],
 													set(level.player.animation, 'emote_geez'),
 									level.player,	[~I mean, it could just be caprice.\\nThere's no guarantee they're being logical.~],
 													set(level.player.animation, 'emote_confused'),
 													[~Seriously loopy stuff can happen when\\nlarge groups blindly follow orders.~],
+													set(self.animation, 'emote_talk'),
 									self,			[~Yeah, no kidding.~],
 												)],
 											~What would they want from him?~, [speech_dialog(
 													set(level.player.animation, 'emote_confused'),
 									level.player,	[~I don't understand, though...\\nWhat would they want from <em>him?</em>~],
+													set(self.animation, 'emote_talk'),
 									self,			[~He actually said the same thing you heard...~],
+													set(self.animation, 'emote_talk'),
 													[~That the elder had stolen\\na bunch of money from Milgram.~],
 													set(level.player.animation, 'emote_nod'),
 									level.player,	[~Well, at least they're not changing\\ntheir story around on us.~],
@@ -334,17 +362,21 @@
 									],
 									set(level.player.animation, 'emote_confused'),
 					level.player,	[~Anyways, I'd better run.\\nLet's hope nothing else happens!~],																	
+									set(self.animation, 'emote_talk'),
 					self,			[~Stay out of trouble, eh?~],																	
 					)],
 								~Well... how should I know?~, [speech_dialog(
 									set(level.player.animation, 'emote_geez'),
 					level.player,	[~Well... how should I know?~],
+									set(self.animation, 'emote_talk'),
 					self,			[~Ahh, I don't know...\\nThis is all so crazy.~],
+									set(self.animation, 'emote_talk'),
 									[~Really makes you wonder...\\nI mean, what's gonna happen next, huh?~],
 									set(level.player.animation, 'emote_confused'),
 					level.player,	[~Yeah, it's a scary world we live in.~],
 									set(level.player.animation, 'emote_raisedfinger'),
 									[~Stay safe, alright?~],
+									set(self.animation, 'emote_talk'),
 					self,			[~Sure thing.~]
 															)],
 								], 
