I can't track down where, but somewhere Berd's flying out animation on crevice village got lost. I've added it back in now.

--- a/data/level/Seaside/crevice-village.cfg
+++ b/data/level/Seaside/crevice-village.cfg
@@ -568,6 +568,15 @@
 			"type": "coral_background3",
 			"x": -182,
 			"y": 812
+		},
+		{
+			"_uuid": "92d043a4283f44a0bbf2b19cd666c85c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "berd's exit target",
+			"type": "target",
+			"x": 96,
+			"y": -416
 		}
 	],
 	"dimensions": [-1312,-256,1219,1028],
@@ -688,8 +697,11 @@
 									level.player,	[~Yes. That does sound like a better plan.~]
 									)]
 								]),
+							
 							if(not level.player.get_stored_event('berds_crevice_village_cave_speech'),
-							level.player.store_event('berds_crevice_village_cave_speech',1))
+								level.player.store_event('berds_crevice_village_cave_speech',1)),
+							
+							Berd.fly_to([lib.standardize.to_xy_point(get_object_or_die(level, q(berd's exit target)))], false),
 							] where Berd = me",
 				"property_data": {
 					"start_mode": "fly"
